[package]
name = "chatroom-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
futures = "0.3.29"
futures-util = "0.3.29"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = "0.4.13"
