[package]
name = "rust-sse-message-bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
futures = "0.3.29"
futures-util = "0.3.29"
hyper = { version = "1.0.1", features = ["full"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = "0.4.13"
